Fixed a spacing issue with tabs.

--- a/src/themes/default/css/ui-core.css
+++ b/src/themes/default/css/ui-core.css
@@ -562,10 +562,6 @@ TD.nowrap {
     display: block;
 }
 
-.body-wrap .nav.nav-tabs {
-    margin-bottom: 0;
-}
-
 PRE.console {
     margin-bottom: 50px;
 }
